--- a/WpfApp1/View/GameDetails.xaml
+++ b/WpfApp1/View/GameDetails.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp.View"
         mc:Ignorable="d"
-        Title="Game" WindowStartupLocation="CenterOwner">
+        Title="Game" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight">
     <StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Name: "/>
