--- a/WpfApp1/View/PlayerDetails.xaml
+++ b/WpfApp1/View/PlayerDetails.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
-        Title="Player" Height="150" Width="250" WindowStartupLocation="CenterOwner">
-    <StackPanel>
+        Title="Player" Height="200" Width="300" WindowStartupLocation="CenterOwner">
+    <StackPanel VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Nick: "/>
             <TextBox Name="txtNick" Width="100"/>
