--- a/WpfApp1/View/ResultDetails.xaml
+++ b/WpfApp1/View/ResultDetails.xaml
@@ -9,19 +9,19 @@
     <StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Player: "/>
-            <ComboBox Name="cmbPlayer"/>
+            <ComboBox Name="cmbPlayer" Width="101"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Game: "/>
-            <ComboBox Name="cmbGame"/>
+            <ComboBox Name="cmbGame" Width="101"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Category: "/>
-            <ComboBox Name="cmbCategory"/>
+            <ComboBox Name="cmbCategory" Width="101"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Time: "/>
-            <TextBox Name="txtTime"/>
+            <TextBox Name="txtTime" Width="100"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Date: "/>
