--- a/WpfApp1/View/ResultDetails.xaml
+++ b/WpfApp1/View/ResultDetails.xaml
@@ -13,7 +13,7 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Game: "/>
-            <ComboBox Name="cmbGame" Width="101"/>
+            <ComboBox Name="cmbGame" Width="101" SelectionChanged="cmbGame_SelectionChanged"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Category: "/>
