--- a/WpfApp1/View/GameDetails.xaml
+++ b/WpfApp1/View/GameDetails.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp.View"
         mc:Ignorable="d"
-        Title="Game" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight">
-    <StackPanel>
+        Title="Game" WindowStartupLocation="CenterOwner" Height="250" Width="300" >
+    <StackPanel VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Name: "/>
             <TextBox x:Name="txtName" Width="100"/>
