--- a/WpfApp1/View/ResultDetails.xaml
+++ b/WpfApp1/View/ResultDetails.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp.View"
         mc:Ignorable="d"
-        Title="ResultDetails" WindowStartupLocation="CenterOwner">
-    <StackPanel>
+        Title="ResultDetails" WindowStartupLocation="CenterOwner" Height="300" Width="300">
+    <StackPanel VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Label Content="Player: "/>
             <ComboBox Name="cmbPlayer" Width="101"/>
