--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,40 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
-        Title="Speedrun Community" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Speedrun Community" Height="350" Width="600" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0,0" StartPoint="1,1">
+            <GradientStop Color="LightBlue"/>
+            <GradientStop Color="MediumPurple" Offset="0.5"/>
+            <GradientStop Color="Purple" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
+
     <StackPanel>
-        <TabControl Panel.ZIndex="-7">
-            <TabItem Header="Players">
-                <StackPanel>
+        <TabControl Background="Transparent">
+            <TabItem Header="Players" Background="Transparent">
+                <StackPanel Background="Transparent">
                     <DataGrid Name="dgPlayers" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Name="btnAddPlayer" Content="Add" Margin="10" Width="60" Click="btnAddPlayer_Click"/>
-                        <Button Name="btnSearchPlayers" Content="Search" Margin="10" Width="60" Height="25" Click="btnSearchPlayers_Click"/>
-                        <Button Name="btnEditPlayer" Content="Edit" Margin="10" Width="60" Height="25" Click="btnEditPlayer_Click"/>
-                        <Button Name="btnDeletePlayer" Content="Delete" Margin="10" Width="60" Height="25" Click="btnDeletePlayer_Click"/>
-                    </StackPanel>
+                    <Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Name="txtPlayersSearch" Width="100" Height="25" Margin="10,0,0,0" Background="{x:Null}" VerticalContentAlignment="Center"/>
+                            <Button Name="btnSearchPlayers" Content="Search" Margin="10" Width="70" Height="25" Click="btnSearchPlayers_Click"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button Name="btnAddPlayer" Content="Add" Margin="10" Width="70" Height="25" Click="btnAddPlayer_Click"/>
+                            <Button Name="btnEditPlayer" Content="Edit" Margin="10" Width="70" Height="25" Click="btnEditPlayer_Click"/>
+                            <Button Name="btnDeletePlayer" Content="Delete" Margin="10" Width="70" Height="25" Click="btnDeletePlayer_Click"/>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Games">
-                <StackPanel>
+            <TabItem Header="Games" Background="Transparent">
+                <StackPanel Background="Transparent">
                     <DataGrid Name="dgGames" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Name="btnAddGame"  Content="Add" Margin="10" Width="60" Height="25" Click="btnAddGame_Click"/>
-                        <Button Name="btnSearchGames" Content="Search" Margin="10" Width="60" Height="25" Click="btnSearchGames_Click"/>
-                        <Button Name="btnEditGame" Content="Edit" Margin="10" Width="60" Height="25" Click="btnEditGame_Click"/>
-                        <Button Name="btnDeleteGame" Content="Delete" Margin="10" Width="60" Height="25" Click="btnDeleteGame_Click"/>
-                    </StackPanel>
+                    <Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Name="txtGamesSearch" Width="100" Height="25" Margin="10,0,0,0" Background="{x:Null}" VerticalContentAlignment="Center"/>
+                            <Button Name="btnSearchGames" Content="Search" Margin="10" Width="60" Height="25" Click="btnSearchGames_Click"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button Name="btnAddGame"  Content="Add" Margin="10" Width="60" Height="25" Click="btnAddGame_Click"/>
+                            <Button Name="btnEditGame" Content="Edit" Margin="10" Width="60" Height="25" Click="btnEditGame_Click"/>
+                            <Button Name="btnDeleteGame" Content="Delete" Margin="10" Width="60" Height="25" Click="btnDeleteGame_Click"/>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Results">
-                <StackPanel>
+            <TabItem Header="Results" Background="Transparent">
+                <StackPanel Background="Transparent">
                     <DataGrid Name="dgResults" AutoGeneratedColumns="dgResults_AutoGeneratedColumns" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Name="btnAddResult" Content="Add" Margin="10" Width="60" Height="25" Click="btnAddResult_Click"/>
-                        <Button Name="btnSearchResults" Content="Search" Margin="10" Width="60" Height="25" Click="btnSearchResults_Click"/>
-                        <Button Name="btnEditResult" Content="Edit" Margin="10" Width="60" Height="25" Click="btnEditResult_Click"/>
-                        <Button Name="btnDeleteResult" Content="Delete" Margin="10" Width="60" Height="25" Click="btnDeleteResult_Click"/>
-                    </StackPanel>
+                    <Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Name="txtResultsSearch" Width="100" Height="25" Margin="10,0,0,0" Background="{x:Null}" VerticalContentAlignment="Center"/>
+                            <Button Name="btnSearchResults" Content="Search" Margin="10" Width="60" Height="25" Click="btnSearchResults_Click"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button Name="btnAddResult" Content="Add" Margin="10" Width="60" Height="25" Click="btnAddResult_Click"/>
+                            <Button Name="btnEditResult" Content="Edit" Margin="10" Width="60" Height="25" Click="btnEditResult_Click"/>
+                            <Button Name="btnDeleteResult" Content="Delete" Margin="10" Width="60" Height="25" Click="btnDeleteResult_Click"/>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
             </TabItem>
         </TabControl>
