--- a/WpfApp1/View/PlayerDetails.xaml
+++ b/WpfApp1/View/PlayerDetails.xaml
@@ -6,18 +6,30 @@
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
         Title="Player" Height="200" Width="300" WindowStartupLocation="CenterOwner">
-    <StackPanel VerticalAlignment="Center">
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <Label Content="Nick: "/>
-            <TextBox Name="txtNick" Width="100"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <Label Content="Age: "/>
-            <TextBox Name="txtAge" Width="101"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Name="btnOK" Content="OK" Margin="10" IsDefault="True" Click="btnOK_Click"/>
-            <Button Name="btnCancel" Content="Cancel" Margin="10" IsCancel="True"/>
-        </StackPanel>
-    </StackPanel>
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0,0" StartPoint="1,1">
+            <GradientStop Color="LightBlue"/>
+            <GradientStop Color="MediumPurple" Offset="0.5"/>
+            <GradientStop Color="Purple" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
+    
+    <Grid VerticalAlignment="Center">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <Label Content="Nick: " HorizontalAlignment="Left" Margin="20,10,0,10"/>
+        <TextBox Name="txtNick" Width="100" Grid.Column="1" Height="25" VerticalContentAlignment="Center"/>
+        <Label Content="Age: " Grid.Row="1" HorizontalAlignment="Left" Margin="20,10,0,10"/>
+        <TextBox Name="txtAge" Width="101" Grid.Row="1" Grid.Column="1" Height="25" VerticalContentAlignment="Center"/>
+        <Button Name="btnOK" Content="OK" Margin="10" IsDefault="True" Click="btnOK_Click" Width="70" Height="25" Grid.Row="2"/>
+        <Button Name="btnCancel" Content="Cancel" Margin="10" IsCancel="True" Width="70" Grid.Row="2" Grid.Column="1"/>
+    </Grid>
 </Window>
